--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,12 @@
     <string name="hint_phone">输入手机号</string>
     <string name="hint_true_phone">输入正确的手机号</string>
     <string name="str_getcode">获取验证码</string>
+    <string name="str_code_erro">验证码错误 </string>
     <string name="hint_input_code">请输入验证码</string>
     <string name="next_step">下一步</string>
     <string name="str_gologin">已有有账号，去登陆</string>
     <string name="str_forgpwd">忘记密码？</string>
+    <string name="str_goreg">该账号不存在，可以注册使用</string>
 
     <!--SMSSDK KEY-->
     <string name="smssdk_value">136d3c822d102ed6a4088350618acc4b</string>
